# langgraph-starter-app

./: .env.example  .gitignore  README.md  RESEARCH_GRAPH_PLAN.md  langgraph.json  pyproject.toml
src/chat_basic/: __init__.py  agent.py
src/chat_basic/utils/: __init__.py  agent_config.py  context_schema.py  prompts.py  tools.py
src/chat_basic/utils/prompts/: chat_basic_system_prompt.txt
src/research_multi_agent/: __init__.py  graph.py  state.py
src/research_multi_agent/agents/: __init__.py  planner.py  researcher.py  writer.py
src/research_multi_agent/utils/: __init__.py  agent_config.py  context_schema.py  prompts.py  tools.py
src/research_multi_agent/utils/prompts/: planner_prompt.txt  researcher_prompt.txt  writer_prompt.txt
src/security/: __init__.py  auth.py
src/shared/: __init__.py  checkpoint.py  config.py
